--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 	<body>
 		<h2> here you will see random stuff for my homework </h2>
 		<img src="http://www.1zoom.me/big2/39/74286-ilonka.jpg" alt="teletubbies: yellow one"/>
+		<script src="homework2.js">
+		</script>
 	</body>
 </html>
